# openapi.yaml
@@ -125,7 +125,6 @@ paths:
         '404':
           description: Folder not found
 
-
   /ai/chat:
     post:
       tags:
@@ -137,12 +136,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              required:
-                - message
-              properties:
-                message:
-                  type: string
+              $ref: '#/components/schemas/chatRequest'
       responses:
         '200':
           description: AI response
@@ -164,7 +158,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AIRequest'
+              $ref: '#/components/schemas/noteRequest'
       responses:
         '201':
           description: AI-generated note created successfully
@@ -174,12 +168,25 @@ paths:
                 $ref: '#/components/schemas/note'
 components:
   schemas:
-    AIRequest:
+    chatRequest:
       type: object
       required:
+        - model
+        - message
+      properties:
+        message:
+          type: string
+        model:
+          $ref: '#/components/schemas/model'
+    noteRequest:
+      type: object
+      required:
+        - model
         - message
         - folder
       properties:
+        model:
+          $ref: '#/components/schemas/model'
         message:
           type: string
           description: The user's message to the AI, asking to create a note
@@ -190,6 +197,14 @@ components:
           type: boolean
           default: true
           description: Flag to indicate if the AI should generate a note from the message
+    model:
+      type: string
+      enum:
+        - DEEPSEEK
+        - GEMMA
+        - LLAMA3
+        - MISTRAL
+        - CODELLAMA
     note:
       type: object
       required:
