# pkm_frontend/libs/api/model/chatRequest.ts
@@ -1,0 +1,20 @@
+/**
+ * PKM API
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import {Model} from './model';
+
+
+export interface ChatRequest {
+    message: string;
+    model: Model;
+}
+export namespace ChatRequest {
+}
+
+
