# pkm_frontend/libs/api/model/model.ts
@@ -1,0 +1,26 @@
+/**
+ * PKM API
+ *
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+export type Model = 'DEEPSEEK' | 'GEMMA' | 'LLAMA3' | 'MISTRAL' | 'CODELLAMA';
+
+export const Model = {
+
+    Deepseek: 'DEEPSEEK' as Model,
+
+    Gemma: 'GEMMA' as Model,
+
+    Llama3: 'LLAMA3' as Model,
+
+    Mistral: 'MISTRAL' as Model,
+
+    Codellama: 'CODELLAMA' as Model
+};
+
