# pkm_frontend/libs/api/model/models.ts
@@ -1,5 +1,6 @@
-export * from './aIRequest';
+export * from './chatRequest';
 export * from './chatWithAI200Response';
-export * from './chatWithAIRequest';
 export * from './folder';
+export * from './model';
 export * from './note';
+export * from './noteRequest';
