# pkm_frontend/libs/api/model/noteRequest.ts
@@ -1,0 +1,31 @@
+/**
+ * PKM API
+ *
+ *
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import {Model} from './model';
+
+
+export interface NoteRequest {
+    model: Model;
+    /**
+     * The user\'s message to the AI, asking to create a note
+     */
+    message: string;
+    /**
+     * The folder where the note should be placed (folder ID)
+     */
+    folder: string;
+    /**
+     * Flag to indicate if the AI should generate a note from the message
+     */
+    createNoteIfPossible?: boolean;
+}
+export namespace NoteRequest {
+}
+
+
